k8s/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts
  namespace: restauranty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: cesarboada/restauranty:discounts
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
  namespace: restauranty
spec:
  selector:
    app: discounts
  ports:
    - port: 3002
      targetPort: 3002
