k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  namespace: restauranty
spec:
  ingressClassName: nginx
  rules:
    - host: gerardo.azure.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: auth.gerardo.azure.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
    - host: discounts.gerardo.azure.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
    - host: items.gerardo.azure.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 3003
